<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">ArenaFinder</string>
    <string name="dev_name">Kelompok C2</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="app_page_home">Home</string>
    <string name="app_page_aktivitas">Activity</string>
    <string name="app_page_referensi">Reference</string>
    <string name="app_page_profile">Profile</string>
    <string name="app_appbar_home">Let\'s Exercise!!</string>
    <string name="app_appbar_aktivitas">Find Fun Activities!!</string>
    <string name="app_appbar_referensi">Discover Your Field!!</string>
    <string name="link_scheme">arenafinder.com</string>
    <string name="link_host">kitten</string>
    <string name="link_path_pref_signup">/account/sign-up</string>
    <string name="link_path_pref_forgot">/account/forgot</string>
    <string name="btn_custom_account">This is Button</string>
    <string name="btn_sign_in">Sign In</string>
    <string name="btn_sign_up">Sign Up</string>
    <string name="btn_next">Next</string>
    <string name="btn_prev">Previous</string>
    <string name="btn_forgot_pass">Send OTP Code</string>
    <string name="btn_kirim_ulang">Resend OTP</string>
    <string name="btn_kirim_ulang_wait">Resend OTP (%1$d %2$s)</string>
    <string name="btn_ganti_password">Change Password</string>
    <string name="btn_wlc_register">Sign Up</string>
    <string name="btn_wlc_login">Sign In</string>
    <string name="btn_pengguna_umum">General User</string>
    <string name="btn_pegelola_lapangan">Field Manager</string>
    <string name="btn_buka_app">Open App</string>
    <string name="btn_lihat_semua">See All</string>
    <string name="btn_go_login">Sign In</string>
    <string name="txt_signin_title">Sign In</string>
    <string name="txt_signup1_title">Sign Up</string>
    <string name="txt_signup2_title">Create Password</string>
    <string name="txt_forgot_title">Forgot Password</string>
    <string name="txt_ganti_password">Change Password</string>
    <string name="txt_otp_title">OTP Verification</string>
    <string name="txt_signup_google_title">Sign Up</string>
    <string name="txt_signin_desc">Welcome back, please enter your email/username and password.</string>
    <string name="txt_signup1_desc">Enter the necessary information to create an account.</string>
    <string name="txt_signup2_desc">Please create a strong password and confirm by typing it again.</string>
    <string name="txt_forgot_desc">Enter the email address you used during registration to verify your identity.</string>
    <string name="txt_sign_up_google_desc">Enter a username and create a strong password, then type it again.</string>
    <string name="txt_ganti_password_desc">Enter the new password, create a complex password.</string>
    <string name="txt_otp_desc">Enter the OTP code we sent to your email address.</string>
    <string name="txt_input_username">Username</string>
    <string name="txt_input_email">Email Address</string>
    <string name="txt_input_userid">Email or Username</string>
    <string name="txt_input_password">Password</string>
    <string name="txt_input_konf_pass">Confirm Password</string>
    <string name="txt_input_name">Full Name</string>
    <string name="txt_helper_default_1">Enter your username or email along with your password.</string>
    <string name="txt_helper_default_2">Enter your username and password.</string>
    <string name="txt_helper_default_3">Enter your identity.</string>
    <string name="txt_helper_default_4">Enter your password and confirmation.</string>
    <string name="txt_helper_default_5">Enter the OTP code.</string>
    <string name="txt_helper_default_6">Enter your email address.</string>
    <string name="txt_helper_default_7">Enter your new password.</string>
    <string name="txt_login_with">Log in with</string>
    <string name="txt_register_with">Register with</string>
    <string name="txt_dont_have_account">Don\'t have an account?</string>
    <string name="txt_have_account">Already have an account?</string>
    <string name="txt_register_here">Register Here.</string>
    <string name="txt_login_here">Log in Here.</string>
    <string name="txt_forgot_pass">Forgot Password?</string>
    <string name="txt_fsnf_server_desk">Unable to connect to %1$s. Please contact the developer immediately to resolve this issue.</string>
    <string name="txt_welcome_desc">Activities that support a healthier and more enjoyable life and activities that enhance the quality of life.</string>
    <string name="txt_signup_type">Sign Up Account As</string>
    <string name="txt_signup_type_desc">Choose the account type, whether you want to register as a general user or a field manager.</string>
    <string name="txt_accmsg_title_def">Message from the Account</string>
    <string name="txt_accmsg_desc_def">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod</string>
    <string name="txt_accmsg_signup_desc">Google account registration successful. Please press the \'Open App\' button to access the homepage.</string>
    <string name="txt_accmsg_chgpass_desc">Password successfully changed. Please log in again with the new password.</string>
    <string name="txt_second">Second</string>
    <string name="txt_minut">Minute</string>
    <string name="txt_update_otp">Resend OTP Code</string>
    <string name="txt_jenis_lapangan">Sport Type</string>
    <string name="txt_jenis_lapangan_desc">Choose Your Favorite Sport Type</string>
    <string name="txt_menu_kegiatan_lapangan">Field Booking</string>
    <string name="txt_menu_aktivitas_komunitas">Community Activities</string>
    <string name="txt_menu_alur_pesan">Booking Flow</string>
    <string name="txt_menu_informasi">Website</string>
    <string name="txt_pesan_lapangan">Book Field</string>
    <string name="txt_sedang_kosong">Currently Empty</string>
    <string name="txt_sedang_kosnog_desc">View Sports Venues Currently Available</string>
    <string name="txt_aktivitas_seru">Fun Activities</string>
    <string name="txt_aktivitas_seru_desc">Exciting Activities to Beat Boredom!</string>
    <string name="txt_terdekat">Near You</string>
    <string name="txt_terdekat_desc">Find the Nearest Sports Venues Around You!</string>
    <string name="txt_def_venue">Tembarak Kertosono Field</string>
    <string name="txt_def_ratting">5.0</string>
    <string name="txt_def_home_kosong">Starting from Rp. 50,000</string>
    <string name="txt_venue_baru">Newly Added</string>
    <string name="txt_venue_baru_desc">New Sports Venues on ArenaFinder</string>
    <string name="txt_buat_kamu">Recommendations for You</string>
    <string name="txt_buat_kamu_desc">Sports Venue Recommendations for You</string>
    <string name="txt_aktivitas_kelompok_def">Group Football Practice TIF Polije Nganjuk</string>
    <string name="txt_referensi_title">Sports Venue References</string>
    <string name="txt_filter">Filter</string>
    <string name="txt_ratting_tertinggi">Highest Rating</string>
    <string name="txt_ratting_tertinggi_desc">Sports Venues with the Highest Rating</string>
    <string name="txt_gratis">Free</string>
    <string name="txt_gratis_desc">Free Sports Venues</string>
    <string name="txt_berbayar">Paid</string>
    <string name="txt_berbayar_desc">Paid Sports Venues</string>
    <string name="txt_disewakan">For Rent</string>
    <string name="txt_disewakan_desc">Sports Venues for Rent</string>
    <string name="txt_fragment_aktivitas">Life-Supporting Activities</string>
    <string name="txt_semua_aktivitas">All Activities</string>
    <string name="txt_semua_aktivitas_desc">See All Sports Activities</string>
    <string name="txt_aktivitas_baru">New Activities</string>
    <string name="txt_aktivitas_semua">All Activities</string>
    <string name="txt_aktivitas_baru_desc">See New Activities on ArenaFinder</string>
    <string name="txt_aktivitas_kosong">Empty Activities</string>
    <string name="txt_aktivitas_kosong_desc">See Empty Sports Activities</string>
    <string name="txt_aktiitas_def">Group Badminton Practice TIF Polije Nganjuk</string>
    <string name="txt_aktivitas_anggota">12/30 Members</string>
    <string name="txt_aktivitas_tgl">October 10, 2023</string>
    <string name="txt_aktivitas_anggota_value">%1$d/%2$d Members</string>
    <string name="txt_aktivitas_price">Rp. 15,000 / Person</string>
    <string name="txt_aktivitas_time">07:00 – 10:20</string>
    <string name="txt_price_value">Rp. %1$s</string>
    <string name="txt_no_ratting">N/A</string>
    <string name="txt_lorem_deksripsi_def">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat</string>
    <string name="txt_lorem_deksripsi_def_double">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat\n\nLorem ipsum dolor sit amet, consectetur adipiscing elit. Sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat</string>
    <string name="txt_ratting_def">4.8</string>
    <string name="txt_view_def">32 x Views</string>
    <string name="txt_shared_def">4 x Shared</string>
    <string name="txt_pilih_metode_bayar">Choose Payment Method</string>
    <string name="txt_review_username">\@ %1$s</string>
    <string name="txt_ulasan">%1$s Reviews</string>
    <string name="txt_berbayar_val">Price Rp. %1$s</string>
    <string name="txt_gratis_v">No need to pay</string>
    <string name="txt_disewakan_v">Rp. %1$s / Session</string>
    <string name="txt_ulasan_2">(%1$s Reviews)</string>
    <string name="txt_no_reviws">No reviews yet</string>
    <string name="btn_give_rat">Give the first review</string>
    <string name="txt_venue_status_disewakan">For Rent</string>
    <string name="txt_venue_status_gratis">Free</string>
    <string name="txt_venue_status_berbayar">Paid</string>
    <string name="txt_venue_status_bervariasi">Varied</string>
    <string name="txt_venue_status_izin">Permission</string>
    <string name="txt_olahraga_futsal">Futsal</string>
    <string name="txt_olahraga_badminton">Badminton</string>
    <string name="txt_olahraga_football">Football</string>
    <string name="txt_olahraga_tenis_meja">Table Tennis</string>
    <string name="txt_ratting_5">5</string>
    <string name="txt_ratting_4">4</string>
    <string name="txt_ratting_3">3</string>
    <string name="txt_ratting_2">2</string>
    <string name="txt_ratting_1">1</string>
    <string name="alt_signup_type">People Logo</string>
    <string name="alt_bottom_sheet_line_indicator">Line Indicator</string>
    <string name="alt_vertical_menu">Vertical Menu</string>
    <string name="btn_simpan">Save</string>
    <string name="bahasa_choose">Choose Language</string>
    <string name="bahasa_indonesia">Indonesian</string>
    <string name="bahasa_jawa">Javanese</string>
    <string name="bahasa_inggris">English</string>
    <string name="txt_alasan_report">Select reason for reporting</string>
    <string name="ujaran_kebencian">Hate speech</string>
    <string name="informasi_palsu">False information</string>
    <string name="berbau_pornografi">Contains pornography</string>
    <string name="perundungan_sosial">Social harassment</string>
    <string name="mengandung_ancaman">Contains threats</string>
    <string name="r_venue_1">False information</string>
    <string name="r_venue_2">Poor service</string>
    <string name="r_venue_3">Mismatched schedule</string>
    <string name="r_venue_4">Unreasonable pricing</string>
    <string name="r_venue_5">Poor security</string>
</resources>