<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".ui.fragment.submain.LanguageSettingFragment">


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_16sdp"
        android:layout_marginTop="@dimen/_25sdp"
        android:fontFamily="@font/poppins_bold"
        android:text="@string/bahasa_choose"
        android:textColor="@color/black"
        android:textSize="@dimen/_16sdp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="@dimen/_40sdp"
        android:orientation="vertical"
        android:padding="16dp">

        <RadioGroup
            android:id="@+id/lsf_radio"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RadioButton
                android:id="@+id/lsf_opsi_indo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto_bold"
                android:text="@string/bahasa_indonesia"
                android:textSize="@dimen/_13sdp" />

            <RadioButton
                android:id="@+id/lsf_opsi_jawa"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto_bold"
                android:text="@string/bahasa_jawa"
                android:textSize="@dimen/_13sdp" />

            <RadioButton
                android:id="@+id/lsf_opsi_inggris"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto_bold"
                android:text="@string/bahasa_inggris"
                android:textSize="@dimen/_13sdp" />
        </RadioGroup>


        <com.google.android.material.button.MaterialButton
            android:id="@+id/lsf_btn_simpan"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_20sdp"
            android:layout_marginStart="@dimen/_5sdp"
            android:layout_marginEnd="@dimen/_5sdp"
            android:layout_marginBottom="@dimen/_10sdp"
            android:backgroundTint="@color/primary_color"
            android:fontFamily="@font/roboto_bold"
            android:text="@string/btn_simpan"
            android:textAllCaps="false"
            android:textSize="@dimen/_12ssp"
            app:cornerRadius="@dimen/_7sdp" />

    </LinearLayout>

</FrameLayout>