<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragment.empty.AccountMessageFragment">

    <LinearLayout
        android:id="@+id/accmsg_linear"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintTop_toTopOf="parent">

        <com.airbnb.lottie.LottieAnimationView
            android:id="@+id/accmsg_lottie"
            android:layout_width="@dimen/_200sdp"
            android:layout_height="@dimen/_200sdp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/_35sdp"
            app:lottie_autoPlay="true"
            app:lottie_loop="true"
            app:lottie_rawRes="@raw/raw_signup_success" />

        <TextView
            android:id="@+id/accmsg_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_30sdp"
            android:layout_marginTop="@dimen/_13sdp"
            android:fontFamily="@font/roboto_bold"
            android:text="@string/txt_accmsg_title_def"
            android:textColor="@color/azure"
            android:textSize="@dimen/_24ssp" />

        <TextView
            android:id="@+id/accmsg_desc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_30sdp"
            android:layout_marginTop="@dimen/_5sdp"
            android:layout_marginEnd="@dimen/_20sdp"
            android:fontFamily="@font/opensans_bold"
            android:text="@string/txt_accmsg_desc_def"
            android:textColor="@color/dimgray"
            android:textSize="@dimen/_12ssp" />

    </LinearLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/accmsg_button"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/_44sdp"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="@dimen/_30sdp"
        android:fontFamily="@font/inter_semibold"
        android:text="@string/btn_custom_account"
        android:textAllCaps="false"
        android:textColor="@color/electric_purple"
        android:textSize="@dimen/_13ssp"
        app:cornerRadius="@dimen/_10sdp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/accmsg_linear"
        app:strokeColor="@color/electric_purple"
        app:strokeWidth="@dimen/_2sdp" />

</androidx.constraintlayout.widget.ConstraintLayout>